<resources>
    <string name="app_name">GroceryStoreOwner</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="product_list_title">Quản lý sản phẩm</string>
    <string name="product_list_search_hint">Nhập tên hoặc mã sản phẩm 🔍</string>
    <string name="product_list_search_button">Tìm kiếm</string>
    <string name="product_list_create_button">+</string>
    <string name="dashboard_title">Quản lý chuỗi cửa hàng tạp hóa</string>
    <string name="dashboard_bill_button">Hóa đơn</string>
    <string name="dashboard_product_button">Sản phẩm</string>
    <string name="dashboard_login_button">Đăng nhập</string>
    <string name="dashboard_receipt_button">Nhập hàng</string>
    <string name="dashboard_cashier_button">Nhân viên</string>
    <string name="product_update_title">Cập nhật thông tin sản phẩm</string>
    <string name="product_update_confirm">Xác nhận</string>
    <string name="product_update_cancel">Hủy</string>
    <string name="product_update_sku">Mã sản phẩm:</string>
    <string name="product_update_name">Tên sản phẩm:</string>
    <string name="product_update_sell_price">Giá bán:</string>
    <string name="product_update_conversion_rate">Tỉ lệ quy đổi:</string>
    <string name="product_update_unit_label">Đơn vị tính:</string>
    <string name="product_update_lower_threshold">Ngưỡng hết hàng:</string>
    <string name="product_update_category">Danh mục:</string>
    <string name="product_update_unpacked_product">Sản phẩm đơn vị:</string>
    <string name="product_update_status">Trạng thái:</string>
    <string name="product_delete_title">Xóa sản phẩm</string>
    <string name="cashier_list_title">Quản lý nhân viên</string>
    <string name="cashier_list_checkbox">Bao gồm nhân viên đã nghỉ việc</string>
    <string name="cashier_list_create_button">+</string>
    <string name="product_item_name">Tên sản phẩm</string>
    <string name="product_item_sku">Mã sản phẩm</string>
    <string name="product_item_category">Danh mục</string>
    <string name="product_item_sell_price">Giá bán</string>
    <string name="product_item_unit_label">Đơn vị tính</string>
    <string name="product_item_status">Trạng thái</string>
    <string name="cashier_item_name">Tên nhân viên</string>
    <string name="cashier_item_store">Cửa hàng</string>
    <string name="cashier_item_username">Tên đăng nhập</string>
    <string name="cashier_item_status">Trạng thái</string>
    <string name="cashier_delete_title">Vô hiệu hóa tài khoản</string>
    <string name="cashier_update_store">Cửa hàng:</string>
    <string name="cashier_update_name">Tên nhân viên:</string>
    <string name="cashier_update_username">Tên đăng nhập:</string>
    <string name="cashier_update_status">Trạng thái:</string>
    <string name="cashier_update_cancel">Hủy</string>
    <string name="cashier_update_confirm">Xác nhận</string>
    <string name="cashier_update_title">Cập nhật thông tin nhân viên</string>
    <string name="cashier_update_password">Mật khẩu</string>
</resources>