<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.cashier.DetailCashierActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:gravity="center"
        android:text="@string/cashier_update_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/cashier_update_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_cashier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/cashier_update_store"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/spn_cashier_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/cashier_update_username"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_cashier_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/cashier_update_password"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_cashier_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_cancel_update_cashier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/cashier_update_cancel" />

        <Button
            android:id="@+id/btn_confirm_update_cashier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/cashier_update_confirm" />
    </LinearLayout>
</LinearLayout>