<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.product.DeleteProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/product_delete_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="5sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:text="@string/product_update_sku"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_product_sku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:text="@string/product_update_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:text="@string/product_update_category"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_product_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:text="@string/product_update_sell_price"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_product_sell_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:text="@string/product_update_unpacked_product"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_product_unpacked_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:text="@string/product_update_conversion_rate"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_product_conversion_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:text="@string/product_update_unit_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_product_unit_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:text="@string/product_update_lower_threshold"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_product_lower_threshold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:text="@string/product_update_status"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_product_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btn_cancel_delete_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/product_update_cancel" />

            <Button
                android:id="@+id/btn_confirm_delete_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/product_update_confirm" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>