<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".activity.product.DetailProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/product_update_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="5sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:text="@string/product_update_sku"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_product_sku"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:text="@string/product_update_name"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:text="@string/product_update_category"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/spn_product_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:text="@string/product_update_sell_price"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_product_sell_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:text="@string/product_update_unpacked_product"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/spn_product_unpacked_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:text="@string/product_update_conversion_rate"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_product_conversion_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:text="@string/product_update_unit_label"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_product_unit_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:text="@string/product_update_lower_threshold"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_product_lower_threshold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="120sp"
                    android:layout_height="43sp"
                    android:text="@string/product_update_status"
                    android:textStyle="bold"
                    android:gravity="center_vertical"/>

                <Spinner
                    android:id="@+id/spn_product_status"
                    android:layout_width="match_parent"
                    android:layout_height="43sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_cancel_update_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:text="@string/product_update_cancel" />

                <Button
                    android:id="@+id/btn_confirm_update_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:text="@string/product_update_confirm" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>