<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:layout_marginVertical="10sp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cashier_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cashier_item_name"
            android:textColor="#873c1e"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cashier_item_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cashier_item_store"
            android:textColor="#c97f5d"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cashier_item_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cashier_item_username"
            android:textColor="#627E66"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cashier_item_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cashier_item_status"
            android:textColor="#586640"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>