<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.main.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <Button
        android:id="@+id/btProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_bill_button"
        android:onClick="clickToViewBill"/>

    <Button
        android:id="@+id/btProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_product_button"
        android:onClick="clickToViewProducts"/>



    <Button
        android:id="@+id/btReceipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="đơn nhập hàng"
        android:onClick="clickToGoToReceipt"/>

    <Button
        android:id="@+id/btInventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="kho hàng"
        android:onClick="clickToGoToInventory"/>
       <Button
        android:id="@+id/btCashier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_cashier_button"
        android:onClick="clickToViewCashiers"/>
    <Button
        android:id="@+id/btEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="sự kiện"
        android:onClick="clickToViewEvent"/>
    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="đăng xuất"
        android:onClick="clickToGoToLogin"/>
</LinearLayout>